<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemberChatActivity">

    <!-- Banner -->
    <RelativeLayout
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rebecca_purple">

        <ImageButton
            android:id="@+id/chat_back_button"
            android:onClick="backButtonClicked"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <TextView
            android:id="@+id/other_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_marginStart="165dp"
            android:layout_marginEnd="175dp"
            android:layout_toEndOf="@id/chat_back_button"
            android:maxWidth="200dp"
            android:text="@string/user"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/member_chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_toolbar"
        android:layout_above="@id/bottom_layout" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:padding="5dp">

        <EditText
            android:id="@+id/memberUserInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Type your message here"
            android:hint="@string/user_input"
            android:background="@drawable/outline"
            android:layout_toStartOf="@id/sendButton"
            android:layout_centerInParent="true"
            android:inputType="text"
            android:padding="15dp"
            android:layout_margin="5dp" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/send_message"
            android:src="@drawable/baseline_send_24"
            android:background="@color/white"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:layout_margin="5dp" />
    </RelativeLayout>

</RelativeLayout>