<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchUserActivity">

    <!-- Banner -->
    <RelativeLayout
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rebecca_purple">

        <ImageButton
            android:id="@+id/search_back_button"
            android:onClick="backButtonClicked"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_marginStart="165dp"
            android:layout_marginEnd="175dp"
            android:layout_toEndOf="@id/search_back_button"
            android:maxWidth="200dp"
            android:text="@string/find_members"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/search_user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/main_toolbar">

        <EditText
            android:id="@+id/search_phone_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/search_user_btn"
            android:autofillHints="phone number"
            android:background="@drawable/outline"
            android:elevation="4dp"
            android:hint="@string/_12365559999"
            android:inputType="phone"
            android:padding="10dp" />

        <ImageButton
            android:id="@+id/search_user_btn"
            android:onClick="searchButtonClicked"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/search_for_user"
            android:src="@drawable/baseline_search_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:tint="@color/rebecca_purple"
            android:background="@drawable/outline"
            android:padding="5dp"
            android:layout_margin="10dp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_user_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_user_layout"
        android:padding="10dp" />

</RelativeLayout>